package lock inside of client

--- a/client/package.json
+++ b/client/package.json
@@ -3,9 +3,15 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "cheerio": "^1.0.0-rc.2",
+    "express": "^4.16.2",
+    "install": "^0.10.4",
+    "npm": "^5.6.0",
+    "path": "^0.12.7",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
-    "react-scripts": "1.1.1"
+    "react-scripts": "1.1.1",
+    "request": "^2.83.0"
   },
   "scripts": {
     "start": "react-scripts start",
