--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
   "homepage": "https://github.com/vag-tsdc/nytreact#readme",
   "dependencies": {
     "body-parser": "^1.18.2",
+    "cheerio": "^1.0.0-rc.2",
     "express": "^4.16.2",
-    "mongoose": "^5.0.7"
+    "mongoose": "^5.0.7",
+    "path": "^0.12.7"
   }
 }
