push all edits saving this homework assignment

--- a/client/package.json
+++ b/client/package.json
@@ -2,16 +2,15 @@
   "name": "client",
   "version": "0.1.0",
   "private": true,
+  "proxy": "http://localhost:3001/",
   "dependencies": {
     "cheerio": "^1.0.0-rc.2",
     "express": "^4.16.2",
-    "install": "^0.10.4",
-    "npm": "^5.6.0",
-    "path": "^0.12.7",
-    "react": "^16.2.0",
-    "react-dom": "^16.2.0",
-    "react-scripts": "1.1.1",
-    "request": "^2.83.0"
+    "axios": "^0.16.2",
+    "react": "^16.0.0",
+    "react-dom": "^16.0.0",
+    "react-router-dom": "^4.1.2",
+    "react-scripts": "1.0.14"
   },
   "scripts": {
     "start": "react-scripts start",
